Test Sandbox Project/src/objects/Training_Plan_Batch_Operation__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Successes__c</fullName>
        <label>Successes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Plan__c</fullName>
        <label>Training Plan</label>
        <referenceTo>Training_Plan__c</referenceTo>
        <relationshipLabel>Training Plan Batch Operations</relationshipLabel>
        <relationshipName>Training_Plan_Batch_Operations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Upsert Assignments</fullName>
                </value>
                <value>
                    <fullName>Delete Assignments</fullName>
                </value>
                <value>
                    <fullName>Update Assignments</fullName>
                </value>
                <value>
                    <fullName>Re-calculate Assignments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Training Plan Batch Operation</label>
    <nameField>
        <displayFormat>TPBO-{0000000}</displayFormat>
        <label>Training Plan Batch Operation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Plan Batch Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>